2005-12-31  Paolo Borelli  <pborelli@katamail.com>

	* configure.in: add a --disable-gnomeprint option for people who want
	to use sourceview in their application without the libgnomeprint dep,
	for instance on win32. However this option should only be used if you
	know what you are doing and not be used when building GNOME.

2005-12-31  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/fortran.lang: does not mark "^COMMON" as
	a comment. Based on a patch by John Spray <jcs116@york.ac.uk>. 
	Fixes bug #168090 (Recognise fortran line comments better)

2005-12-30  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/ada.lang: fixed bug #316330 (Ada Syntax
	highlighting is incorrect)

2005-12-30  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/php.lang: changed Section to "Scripts".
	Fixed bug #316587 (PHP syntax file should be in the "Scripting" 
	section instead of "Sources")

2005-12-30  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/R.lang: s/Quote/Quoted

	* gtksourceview/language-specs/gtkrc.lang: s/Quote/Quoted

	* gtksourceview/language-specs/ini.lang: s/Quote/Quoted

	* gtksourceview/language-specs/ruby.lang: fixed bug #316612 (Ruby 
	coloration problems). Patch by Michael Witrant <mike@lepton.fr>

2005-12-30  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/css.lang: fixed bug #323750 (CSS 
	highlighting missing "font" property).

2005-12-30  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/language-specs/perl.lang: fixed bug #323999 (perl 
	inline pod not properly highlighted). Based on a patch by 
	Jaap Karssenberg <pardus@cpan.org>

2005-12-28  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c (build_syntax_regions_table): 
	avoid possible division by zero bug with inaccurate implementations
	of GTimer (for instance win32). Noticed by Stefan Knorr (bug 321898).

2005-11-22  Paolo Borelli  <pborelli@katamail.com>
