@@ -29,8 +29,9 @@
 #endif
 
 #include <string.h>
-#include <glib/gi18n.h>
 #include <gtk/gtk.h>
+
+#include "gtksourceview-i18n.h"
 
 #include "gtksourcebuffer.h"
 #include "gtksourcetag.h"
