@@ -24,7 +24,8 @@
 #include <string.h>
 
 #include <libxml/xmlreader.h>
-#include <glib/gi18n.h>
+
+#include "gtksourceview-i18n.h"
 
 #include "gtksourcelanguagesmanager.h"
 #include "gtksourcelanguage-private.h"
