@@ -33,7 +33,7 @@
 #include <string.h>
 #include <time.h>
 
-#include <glib/gi18n.h>
+#include "gtksourceview-i18n.h"
 
 #include "gtksourceview-marshal.h"
 #include "gtksourcetag.h"
